--- a/providers/google/provider.yaml
+++ b/providers/google/provider.yaml
@@ -833,6 +833,7 @@ hooks:
   - integration-name: Google
     python-modules:
       - airflow.providers.google.common.hooks.base_google
+      - airflow.providers.google.common.hooks.operation_helpers
   - integration-name: Google Discovery API
     python-modules:
       - airflow.providers.google.common.hooks.discovery_api
