--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -312,7 +312,7 @@ If release name contains chart name it will be used as a full name.
   {{- if .Values.dags.gitSync.livenessProbe }}
   livenessProbe: {{ tpl (toYaml .Values.dags.gitSync.livenessProbe) . | nindent 4 }}
   {{- end }}
-  {{- if .Values.dags.gitSync.livenessProbe }}
+  {{- if .Values.dags.gitSync.readinessProbe }}
   readinessProbe: {{ tpl (toYaml .Values.dags.gitSync.readinessProbe) . | nindent 4 }}
   {{- end }}
   volumeMounts:
