--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -309,10 +309,10 @@ If release name contains chart name it will be used as a full name.
     {{- toYaml . | nindent 4 }}
     {{- end }}
   resources: {{ toYaml .Values.dags.gitSync.resources | nindent 4 }}
-  {{- if .Values.dags.gitSync.livenessProbe }}
+  {{- if and .Values.dags.gitSync.livenessProbe (not .is_init) }}
   livenessProbe: {{ tpl (toYaml .Values.dags.gitSync.livenessProbe) . | nindent 4 }}
   {{- end }}
-  {{- if .Values.dags.gitSync.readinessProbe }}
+  {{- if and .Values.dags.gitSync.readinessProbe (not .is_init) }}
   readinessProbe: {{ tpl (toYaml .Values.dags.gitSync.readinessProbe) . | nindent 4 }}
   {{- end }}
   volumeMounts:
