AIP-65 | Add dag versions to DAGRunResponse

--- a/airflow/api_fastapi/core_api/openapi/v1-generated.yaml
+++ b/airflow/api_fastapi/core_api/openapi/v1-generated.yaml
@@ -8117,6 +8117,12 @@ components:
           - type: string
           - type: 'null'
           title: Note
+        dag_versions:
+          items:
+            type: string
+            format: uuid
+          type: array
+          title: Dag Versions
       type: object
       required:
       - dag_run_id
@@ -8134,6 +8140,7 @@ components:
       - triggered_by
       - conf
       - note
+      - dag_versions
       title: DAGRunResponse
       description: DAG Run serializer for responses.
     DAGRunStates:
